trunk/Archive2/90/f206220040ba0e/output
main.cpp: In instantiation of 'void set_i(types<>, F&&) [with F = X]':
main.cpp:168:46:   required from 'void set(F&&) [with Sig = {}; F = X]'
main.cpp:207:12:   required from here
main.cpp:127:5: error: static assertion failed: some useful error message
     static_assert(deducible, "some useful error message");
     ^
